# maximum-matching

./: .gitignore  .gitmodules  README.md  run.sh
blossom5/: example.cpp
data/: README.md
metagraphs/: Makefile  cmake_install.cmake  measure.csv
metagraphs/include/: Debug.h  GImporter.h  GraphSource.h  Statistics.h  TypeEnums.h
metagraphs/include/norm/: MVertex.h  MetaGraphsSolver.h  MetaGraphsSolver.tpp
metagraphs/include/qpt/: MetaGraphsSolver.tpp
metagraphs/include/wr/: MetaGraphsSolver.tpp
metagraphs/src/: GImporter.cpp  GraphSource.cpp  Main.cpp  Statistics.cpp
parallel/: CMakeLists.txt  MakeFile  makefile.variables  meta.draft  metagraph.cc  metagraph.h
parallel/benchmarks/parallel-matching/: CherryBlossom.h  CherryTree.h  MVertex.cpp  MVertex.h  MaximalMatching.h  makefile  metagraph  metagraph.cc  metagraph.h
parallel/benchmarks/parallel-matching/utils/: Debug.h  HalfEdge.h  List.h  Statistics.h
parallel/random/: makefile  makefile.variables2
utils/: blossom5_utils.py  graph.txt  graph.txt.blossomv.preprocessed
